--- a/Assignments/Simplepayroll/Simplepayroll.html
+++ b/Assignments/Simplepayroll/Simplepayroll.html
@@ -16,7 +16,8 @@
             <li><a href="../Simplepayroll/Simplepayroll.html" class="active">Simple Payroll</a></li>
         </ul>
     </nav>
-    <main class="container payroll-container">
+
+    <div class="payroll-management-container">
         <h1>Payroll Management</h1>
         <form id="payrollForm" class="form-group">
             <label for="employeeName">Employee Name:</label>
@@ -29,7 +30,9 @@
             <input type="number" id="deductionAmount" required>
             <button type="submit">Add Employee</button>
         </form>
+    </div>
 
+    <div class="payroll-list-container">
         <h2>Payroll List</h2>
         <table>
             <thead>
@@ -46,7 +49,8 @@
             </thead>
             <tbody id="payrollTableBody"></tbody>
         </table>
-    </main>
+    </div>
+
     <script type="module" src="Simplepayroll.js"></script>
 </body>
 </html>
