--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <nav>
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="Assignments/Conversion/Conversion.html">Conversion</a></li>
-            <li><a href="Assignments/Factorial/Factorial.html">Factorial</a></li>
-            <li><a href="Assignments/IncomeTax/IncomeTax.html">Income Tax</a></li>
-            <li><a href="Assignments/Simplepayroll/Simplepayroll.html">Simple Payroll</a></li>
+            <li><a href="assignments/conversion/conversion.html">Conversion</a></li>
+            <li><a href="assignments/factorial/factorial.html">Factorial</a></li>
+            <li><a href="assignments/incometax/incometax.html">Income Tax</a></li>
+            <li><a href="assignments/simplepayroll/simplepayroll.html">Simple Payroll</a></li>
         </ul>
     </nav>
     <main class="container">
         <h1>Welcome to the Home Page</h1>
         <p>Select an assignment from the navigation menu.</p>
     </main>
+    <footer>
+        <p>Created by Lewis Von A. Caballero | Contact: <a href="mailto:lcaballero@addu.edu.ph">lcaballero@addu.edu.ph</a> | &copy; 2024 Lewis Von A. Caballero. All rights reserved. | 
+            <a href="https://github.com/CreaaamyLatte" target="_blank">GitHub</a> | 
+            <a href="https://www.facebook.com/Von312" target="_blank">Facebook</a> | 
+        </p>
+    </footer>
 </body>
 </html>
