--- a/Assignments/Simplepayroll/Simplepayroll.html
+++ b/Assignments/Simplepayroll/Simplepayroll.html
@@ -50,7 +50,12 @@
             <tbody id="payrollTableBody"></tbody>
         </table>
     </div>
-
+    <footer>
+        <p>Created by Lewis Von A. Caballero | Contact: <a href="mailto:lcaballero@addu.edu.ph">lcaballero@addu.edu.ph</a> | &copy; 2024 Lewis Von A. Caballero. All rights reserved. | 
+            <a href="https://github.com/CreaaamyLatte" target="_blank">GitHub</a> | 
+            <a href="https://www.facebook.com/Von312" target="_blank">Facebook</a> | 
+        </p>
+    </footer>
     <script type="module" src="Simplepayroll.js"></script>
 </body>
 </html>
