--- a/Assignments/IncomeTax/IncomeTax.html
+++ b/Assignments/IncomeTax/IncomeTax.html
@@ -28,6 +28,12 @@
             <p><strong>Income Tax:</strong> <span id="taxOutput">0.00</span></p>
         </div>
     </main>
+    <footer>
+        <p>Created by Lewis Von A. Caballero | Contact: <a href="mailto:lcaballero@addu.edu.ph">lcaballero@addu.edu.ph</a> | &copy; 2024 Lewis Von A. Caballero. All rights reserved. | 
+            <a href="https://github.com/CreaaamyLatte" target="_blank">GitHub</a> | 
+            <a href="https://www.facebook.com/Von312" target="_blank">Facebook</a> | 
+        </p>
+    </footer>
     <script type="module" src="IncomeTax.js"></script>
 </body>
 </html>
