--- a/Assignments/Factorial/Factorial.html
+++ b/Assignments/Factorial/Factorial.html
@@ -30,6 +30,12 @@
             <p><strong>Result:</strong> <span id="resultDisplay"></span></p>
         </div>
     </main>
+    <footer>
+        <p>Created by Lewis Von A. Caballero | Contact: <a href="mailto:lcaballero@addu.edu.ph">lcaballero@addu.edu.ph</a> | &copy; 2024 Lewis Von A. Caballero. All rights reserved. | 
+            <a href="https://github.com/CreaaamyLatte" target="_blank">GitHub</a> | 
+            <a href="https://www.facebook.com/Von312" target="_blank">Facebook</a> | 
+        </p>
+    </footer>
     <script type="module" src="Factorial.js"></script>
 </body>
 </html>
