--- a/Assignments/Conversion/Conversion.html
+++ b/Assignments/Conversion/Conversion.html
@@ -37,6 +37,13 @@
             <p><strong>Result:</strong> <span id="conversionResult">0.00</span></p>
         </div>
     </main>
+    <footer>
+        <p>Created by Lewis Von A. Caballero | Contact: <a href="mailto:lcaballero@addu.edu.ph">lcaballero@addu.edu.ph</a> | &copy; 2024 Lewis Von A. Caballero. All rights reserved. | 
+            <a href="https://github.com/CreaaamyLatte" target="_blank">GitHub</a> | 
+            <a href="https://www.facebook.com/Von312" target="_blank">Facebook</a> | 
+        </p>
+    </footer>
     <script type="module" src="Conversion.js"></script>
+    
 </body>
 </html>
